--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -158,6 +158,15 @@ BuildRequires: R-devel swig >= 1.3.33 perl-libs
 %endif
 %endif
 
+%global php_extdir %(php-config --extension-dir 2>/dev/null || echo %{_libdir}/php4)
+# Fix private-shared-object-provides
+# RPM 4.8
+%{?filter_provides_in: %filter_provides_in %{php_extdir}/.*\.so$}
+%{?filter_setup}
+# RPM 4.9
+%global __provides_exclude_from %{?__provides_exclude_from:%__provides_exclude_from|}%{php_extdir}/.*\\.so$
+
+
 #-- main graphviz rpm ------------------------------------------------
 Requires:         urw-fonts
 Requires(post):   /sbin/ldconfig
@@ -510,17 +519,8 @@ Perl extension for graphviz.
 Group:          Applications/Multimedia
 Summary:        PHP extension for graphviz
 Requires:       %{name} = %{version}-%{release}, php
-%if 0%{?fedora} >= 17
 Requires:       php(zend-abi) = %{php_zend_api}
 Requires:       php(api) = %{php_core_api}
-%else
-%if 0%{?fedora} == 16
-Requires:       php-api = %{php_apiver}
-%else
-Requires:       php(zend-abi) = %{php_zend_api}
-Requires:       php(api) = %{php_core_api}
-%endif
-%endif
 
 %description php
 PHP extension for graphviz.
