--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -158,6 +158,8 @@ BuildRequires: R-devel swig >= 1.3.33 perl-libs
 %endif
 %endif
 
+%global php_apiver %((echo 0; php -i 2>/dev/null | sed -n 's/^PHP API => //p') | tail -1)
+
 %global php_extdir %(php-config --extension-dir 2>/dev/null || echo %{_libdir}/php4)
 # Fix private-shared-object-provides
 # RPM 4.8
