--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -223,7 +223,9 @@ fi
 %exclude %{_libdir}/graphviz/libgvplugin_gdk_pixbuf.*
 %endif
 %exclude %{_libdir}/graphviz/libgvplugin_gtk.*
+%if 0%{?GHOSTSCRIPT}
 %exclude %{_libdir}/graphviz/libgvplugin_gs.*
+%endif
 %if 0%{?RSVG}
 %exclude %{_libdir}/graphviz/libgvplugin_rsvg.*
 %endif
@@ -275,7 +277,9 @@ LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c
 %{_libdir}/graphviz/libgvplugin_gdk_pixbuf.*
 %endif
 %{_libdir}/graphviz/libgvplugin_gtk.*
+%if 0%{?GHOSTSCRIPT}
 %{_libdir}/graphviz/libgvplugin_gs.*
+%endif
 %if 0%{?RSVG}
 %{_libdir}/graphviz/libgvplugin_rsvg.*
 %endif
