--- a/plugin/lasi/Makefile.am
+++ b/plugin/lasi/Makefile.am
@@ -40,7 +40,7 @@ libgvplugin_lasi_la_LIBADD = \
 
 gvrender_lasi.o gvrender_lasi.lo: ps.h
 
-ps.h : $(srcdir)/ps.txt
+ps.h : $(top_srcdir)/plugin/core/ps.txt   
 	$(AWK) -f $(top_srcdir)/awk/stringize.awk $(srcdir)/ps.txt > ps.h
 
 if WITH_WIN32
