--- a/plugin/lasi/Makefile.am
+++ b/plugin/lasi/Makefile.am
@@ -31,7 +31,7 @@ libgvplugin_lasi_C_la_SOURCES = \
 	gvplugin_lasi.c \
 	gvrender_lasi.cpp \
 	gvloadimage_lasi.c \
-	ps.txt
+	$(top_srcdir)/plugin/core/ps.txt
 
 libgvplugin_lasi_la_LDFLAGS = -version-info @GVPLUGIN_VERSION_INFO@
 libgvplugin_lasi_la_SOURCES = $(libgvplugin_lasi_C_la_SOURCES)
