--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -137,8 +137,6 @@ BuildRequires: librsvg2-devel
 BuildRequires: gd gd-devel
 %define DEVIL 1
 BuildRequires: DevIL-devel
-#define WEBP 1
-# BuildRequires: libwebp-devel
 %define SFDP 1
 BuildRequires: gts-devel
 %define LASI 1
@@ -157,6 +155,10 @@ BuildRequires: ghostscript-devel
 #BuildRequires: ming ming-devel
 %define R_LANG 1
 BuildRequires: R-devel swig >= 1.3.33 perl-libs
+%endif
+%if %fedora >= 17
+%define WEBP 1
+BuildRequires: libwebp-devel
 %endif
 %endif
 
