Add gvrender_core_pov.c to Windows project file

--- a/plugin/core/gvplugin_core.vcproj
+++ b/plugin/core/gvplugin_core.vcproj
@@ -220,6 +220,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\gvrender_core_pov.c"
+				>
+			</File>
+			<File
 				RelativePath=".\gvrender_core_ps.c"
 				>
 			</File>
