clean up temporary file

--- a/tclpkg/gv/Makefile.am
+++ b/tclpkg/gv/Makefile.am
@@ -97,6 +97,7 @@ gv_lua.cpp: gv.i
 	$(SWIG) -c++ -lua -o gv_lua.cpp $(srcdir)/gv.i
 	mv $@ $@.orig
 	sed '/include/s/malloc\.h/cstdlib/' $@.orig > $@
+	rm $@.orig
 
 pkgocamldir = $(pkglibdir)/ocaml
 OCAML_data = gv.cmo gv.cma gv.cmi gv.mli META.gv
