--- a/plugin/core/Makefile.am
+++ b/plugin/core/Makefile.am
@@ -33,6 +33,7 @@ libgvplugin_core_C_la_SOURCES = \
 	gvrender_core_tk.c \
 	gvrender_core_vml.c \
 	gvrender_core_pov.c \
+	gvrender_core_pic.c \
 	gvloadimage_core.c \
 	ps.txt
 
