--- a/lib/gvpr/Makefile.am
+++ b/lib/gvpr/Makefile.am
@@ -14,6 +14,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/ast \
 	-I$(top_srcdir)/lib/ingraphs \
 	-I$(top_srcdir)/lib/common \
+	-I$(top_builddir)/lib/common \
 	-I$(top_srcdir)/lib/cgraph \
 	-I$(top_srcdir)/lib/cdt \
 	-DDFLT_GVPRPATH="\".$(PATH_SEPARATOR)$(pkgdatadir)/gvpr\""
