--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,7 +2,7 @@
 ## Process this file with automake to produce Makefile.in
 
 
-SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast \
+SUBDIRS = cdt graph cgraph pathplan sfio vmalloc ast \
 	vpsc rbtree ortho sparse patchwork expr common \
 	pack xdot label gvc ingraphs topfish glcomp \
 	circogen dotgen dotgen2 fdpgen neatogen twopigen sfdpgen osage gvpr
