--- a/tclpkg/tcldot/Makefile.am
+++ b/tclpkg/tcldot/Makefile.am
@@ -58,10 +58,10 @@ libtcldot_la_DEPENDENCIES =  $(top_builddir)/lib/gvc/libgvc.la
 
 # GDTCLFT requires gd libs to be builtin
 if WITH_LIBGD
-libtcldot_la_LIBADD += $(GD_LIBS) $(FONTCONFIG_LIBS) $(FREETYPE2_LIBS) $(JPEG_LIBS) $(PNG_LIBS) $(Z_LIBS)
+libtcldot_la_LIBADD += $(GD_LIBS)
 endif
 
-libtcldot_la_LIBADD += $(LIBGEN_LIBS) $(ICONV_LIBS) $(MATH_LIBS)
+libtcldot_la_LIBADD += $(LIBGEN_LIBS) $(MATH_LIBS)
 
 libtcldot_builtin_la_SOURCES = tcldot.c tcldot_builtins.c $(GDTCLFT)
 libtcldot_builtin_la_CPPFLAGS = $(AM_CPPFLAGS) -DDEMAND_LOADING=1
@@ -84,10 +84,10 @@ endif
 
 if WITH_LIBGD
 libtcldot_builtin_la_LIBADD += $(top_builddir)/plugin/gd/libgvplugin_gd_C.la
-libtcldot_builtin_la_LIBADD += $(GD_LIBS) $(FONTCONFIG_LIBS) $(FREETYPE2_LIBS) $(JPEG_LIBS) $(PNG_LIBS) $(Z_LIBS)
+libtcldot_builtin_la_LIBADD += $(GD_LIBS)
 endif
 
-libtcldot_builtin_la_LIBADD += $(ICONV_LIBS) $(EXPAT_LIBS) $(LIBGEN_LIBS) $(SOCKET_LIBS) $(IPSEPCOLA_LIBS) $(MATH_LIBS)
+libtcldot_builtin_la_LIBADD += $(EXPAT_LIBS) $(LIBGEN_LIBS) $(SOCKET_LIBS) $(IPSEPCOLA_LIBS) $(MATH_LIBS)
 
 if WITH_TCL
 all-local: pkgIndex.tcl
