fix build when gd-devel not installed

--- a/configure.ac
+++ b/configure.ac
@@ -2574,9 +2574,7 @@ AC_ARG_WITH(libgd,
   [AS_HELP_STRING([--with-libgd=yes],[use gd library])],
   [], [with_libgd=yes])
 
-if test "x$with_libgd" = "xyes"; then
-  with_libgd=yes
-else
+if test "x$with_libgd" != "xyes"; then
   use_gd="No (disabled)"
 fi
 
@@ -2679,6 +2677,7 @@ if test "x$use_gd" = "x"; then
       AC_CHECK_HEADER(gd.h,,[
         AC_MSG_WARN(Optional GD library not available - no gd.h)
         use_gd="No (gd headers not found)"
+	with_libgd="no"
       ])
       if test "x$use_gd" = "x"; then
         AC_CHECK_LIB(gd,main,[
