--- a/plugin/gd/Makefile.am
+++ b/plugin/gd/Makefile.am
@@ -16,12 +16,14 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/cdt \
 	$(PANGOCAIRO_CFLAGS) $(GD_INCLUDES) $(LIBGVC_CFLAGS)
 
+if WITH_LIBGD
 noinst_LTLIBRARIES = libgvplugin_gd_C.la
 
 if WITH_WIN32
 lib_LTLIBRARIES = libgvplugin_gd.la
 else
 pkglib_LTLIBRARIES = libgvplugin_gd.la
+endif
 endif
 
 libgvplugin_gd_C_la_SOURCES = \
@@ -34,6 +36,8 @@ libgvplugin_gd_C_la_SOURCES = \
 
 libgvplugin_gd_la_LDFLAGS = -version-info @GVPLUGIN_VERSION_INFO@
 libgvplugin_gd_la_SOURCES = $(libgvplugin_gd_C_la_SOURCES)
+
+if WITH_LIBGD
 libgvplugin_gd_la_LIBADD = \
 	$(top_builddir)/lib/gvc/libgvc.la \
 	$(top_builddir)/lib/$(GRAPH)/lib$(GRAPH).la \
@@ -47,6 +51,7 @@ endif
 
 if WITH_DARWIN9
 libgvplugin_gd_la_LDFLAGS += -Wl,-exported_symbol,_gvplugin_gd_LTX_library
+endif
 endif
 
 EXTRA_DIST = Makefile.old gvplugin_gd.vcproj gvplugin_gd.def
